--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+body {
+  background-image: url(../images/numbers.png);
+}
+
 button {
   height: 100px;
   width: 100px;
@@ -5,10 +9,17 @@ button {
   font-size: 40px;
 }
 
+a {
+  color: #c4ad19;
+  text-decoration: none;
+  font-size: 1.3em;
+  font-weight: bold;
+}
+
 .flex-container {
     display:flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: center;
     align-content: flex-start;
     align-items: stretch;
